...

    var label: String {
        switch self {
        case .batterySaver:
            "Battery Saver"
        case .bestAccuracy:
            "Best Accuracy"
        }
    }
}

struct LinkSettings: Equatable {
    var connectionAvailability: ConnectionAvailability
...
